data/all_generated_tests/raw_wast_tests/br_table_TypeMismatchinControlFlowInstructions_2451.wast
;; 1. **Test: BrTable with Single Target Label, Type Mismatch**    - **Description**:      A `br_table` instruction with a single target label that expects an `i32` argument but is given an `i64` during execution.    - **Constraint Checked**:      Ensures that the `br_table` correctly identifies type mismatches between the operand stack and the expected label type.    - **Related Type Mismatch**:      Forward branch assuming incorrect type for operand.

(assert_invalid
  (module (func
    (block (br_table 0 (i64.const 42)))
  ))
  "type mismatch"
)